--- a/src/index.scss
+++ b/src/index.scss
@@ -5,3 +5,15 @@
 h1 {
     color: blue;
 }
+
+#basicSequencer {
+    display: flexbox;
+    margin: 1rem;
+    text-align: center;
+    align-self: center;
+    background-color: rgb(102, 210, 244);
+    div {
+        margin-top: 1rem;
+    }
+}
+
