Create parentSequencer class

--- a/src/index.scss
+++ b/src/index.scss
@@ -6,7 +6,7 @@ h1 {
     color: blue;
 }
 
-#basicSequencer {
+#test-grid{
     display: flexbox;
     margin: 1rem;
     text-align: center;
@@ -16,4 +16,5 @@ h1 {
         margin-top: 1rem;
     }
 }
+
 
