--- a/src/index.scss
+++ b/src/index.scss
@@ -5,9 +5,11 @@
 h1 {
     color: blue;
 }
-
+button {
+    cursor: pointer;
+}
 #test-grid{
-    display: flexbox;
+    display: grid;
     margin: 1rem;
     text-align: center;
     align-self: center;
@@ -17,4 +19,13 @@ h1 {
     }
 }
 
-
+.node {
+    display: inline-flex;
+    border-radius: 10px;
+    margin: 5px;
+    height: 50px;
+    width: 50px;
+    border: 1px solid black;
+    background-color: lightslategray;
+    cursor: pointer;
+}
