--- a/src/index.scss
+++ b/src/index.scss
@@ -14,9 +14,8 @@ button {
     text-align: center;
     align-self: center;
     background-color: rgb(102, 210, 244);
-    div {
-        margin-top: 1rem;
-    }
+    height: 300px;
+    width: 1000px;
 }
 
 .node {
@@ -28,4 +27,13 @@ button {
     border: 1px solid black;
     background-color: lightslategray;
     cursor: pointer;
+}
+
+.selected {
+    border: 1px solid black;
+    background-color: yellow;
+}
+.selected-2 {
+    border: 1px solid black;
+    background-color: red;
 }
