--- a/src/index.scss
+++ b/src/index.scss
@@ -37,3 +37,8 @@ button {
     border: 1px solid black;
     background-color: red;
 }
+
+.node.current-beat {
+    transition: border .2s ease-out;
+    border: 1px solid white;
+}
