--- a/src/index.scss
+++ b/src/index.scss
@@ -8,22 +8,27 @@ h1 {
 button {
     cursor: pointer;
 }
+#synth-container {
+    display: inline-flex;
+    background-color: grey;
+}
+
+#synth-controls {
+    display: flex;
+    justify-content: center;
+}
+
 #test-grid{
-    display: grid;
-    margin: 1rem;
-    text-align: center;
-    align-self: center;
-    background-color: rgb(102, 210, 244);
-    height: 300px;
-    width: 1000px;
+    display: block;
+    
 }
 
 .node {
     display: inline-flex;
-    border-radius: 10px;
-    margin: 5px;
-    height: 50px;
-    width: 50px;
+    border-radius: 5px;
+    // margin: 5px;
+    height: 25px;
+    width: 25px;
     border: 1px solid black;
     background-color: lightslategray;
     cursor: pointer;
