--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,7 @@
 // entry file for css
+// reset file
+@import './styles/reset.css';
 
-//  can import css files from the styles folder with: @import './styles/otherStyling.css'
-@import './styles/anotherStyle.css';
 h1 {
     color: blue;
 }
@@ -36,7 +36,6 @@ button {
 
 .node:nth-child(4n+1) {
     margin-left: 10px;
-    // background-color: rgb(78, 89, 101);
 }
 
 .selected {
@@ -51,4 +50,44 @@ button {
 .node.current-beat {
     transition: border .2s ease-out;
     border: 1px solid white;
+}
+
+.keyboard-node {
+    display: inline-flex;
+    border-radius: 5px;
+    align-items: center;
+    justify-content: center;
+    height: 25px;
+    width: 25px;
+    border: 1px solid black;
+    background-color: lightslategray;
+}
+.large {
+    width: 35px
+}
+.larger {
+    width: 50px;
+}
+
+.largest {
+    width: 60px;
+}
+.keyboard {
+    background-color: grey;
+    width: 53%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    
+}
+.root {
+    border-color: white;
+}
+.pressed {
+    background-color: aqua;
+}
+
+.keyboard-row {
+    display: flex;
+    justify-content: space-between;
 }
