--- a/src/index.scss
+++ b/src/index.scss
@@ -3,52 +3,119 @@
 @import './styles/reset.css';
 
 h1 {
-    color: blue;
+    
+   
 }
 
+header {
+    background-color:#c8c8c8;
+    display: flex;
+    font-size: larger;
+    justify-content: center;
+    border: 2px solid rgb(90, 90, 90);
+    border-radius: 10px;
+    margin-bottom: 5px;
+    margin-top: 5px;
+}
+
+body {
+    margin-left: 100px;
+    margin-right: 100px;
+    background-color: #c8c8c8;
+    color: rgb(100, 100, 100);
+}
+
+footer {
+    background-color:#c8c8c8;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    border: 2px solid rgb(100, 100, 100);
+    border-radius: 10px;
+    margin-top: 5px;
+}
 
 #main-blocks {
-    background-color: blue;
-   display: grid;
-   grid-template-columns: 620px 620px;
+    background-color: #c8c8c8;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    align-items: center;
+    width: 100%;
+    border: 2px solid rgb(100, 100, 100);
+    border-radius: 10px;
    
 }
 
 
-
 button {
+    background-color: rgb(165, 165, 165);
     cursor: pointer;
 }
 .container {
-    width: 615px;
-    height: 300px;
-    display: inline flex;
-    background-color: grey;
+    width: 520px;
+    height: 250x;
+    padding: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    display: flex;
+    justify-content: space-between;
+    background-color: rgb(179, 179, 179);
+    border: 2px solid rgb(100, 100, 100);
+    border-radius: 10px;
+    
 }
 
-#synth-controls {
+.left   {
     display: flex;
-    justify-content: center;
+    align-self: center;
+    justify-content: space-evenly;
+    flex-direction: column;
+    
+}
+
+.right {
+    display: flex;
+    align-self: center;
+    justify-content: space-evenly;
+    flex-direction: column;
+  
+}
+
+.controls {
+    display: inline-block;
+    
 }
 
 .grid{
-    display: block;
+    display: inline-block;
     
 }
 
 .node {
     display: inline-flex;
     border-radius: 5px;
-    // margin: 5px;
     height: 25px;
     width: 25px;
     border: 1px solid black;
-    background-color: lightslategray;
+    background-color: #c8c8c8;
     cursor: pointer;
 }
 
 .node:nth-child(4n+1) {
     margin-left: 10px;
+}
+
+.chord-node {
+    display: inline-flex;
+    border-radius: 5px;
+    height: 25px;
+    width: 100px;
+    margin-left: 10px;
+    border: 1px solid black;
+    background-color: #c8c8c8;
+    cursor: pointer;
 }
 
 .selected {
@@ -77,7 +144,7 @@ button {
     height: 25px;
     width: 25px;
     border: 1px solid black;
-    background-color: lightslategray;
+    background-color: #c8c8c8;
 }
 .large {
     width: 35px
@@ -90,11 +157,10 @@ button {
     width: 60px;
 }
 .keyboard {
-    background-color: grey;
-    // width: 500px;
-    display: inline-flex;
+    height: fit-content;
+    display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: center;
     
 }
 .root {
@@ -111,18 +177,8 @@ button {
 
 .inactive {
     color: black;
-    background-color: rgb(79, 77, 77);
+    background-color: rgb(128, 128, 128);
 }
 
 
 
-// .box {
-//     background-color: red;
-//     border: 2px solid black;
-//     width: 40px;
-//     height: 40px;
-// }
-// #gridtest {
-//     display: grid;
-//     grid-template-columns: 40px 40px;
-// }
