--- a/src/index.scss
+++ b/src/index.scss
@@ -11,6 +11,7 @@ header {
     background-color:#c8c8c8;
     display: flex;
     font-size: larger;
+    width: 100%;
     justify-content: center;
     border: 2px solid rgb(90, 90, 90);
     border-radius: 10px;
@@ -30,6 +31,7 @@ footer {
     display: flex;
     justify-content: space-around;
     align-items: center;
+    width: 100%;
     border: 2px solid rgb(100, 100, 100);
     border-radius: 10px;
     margin-top: 5px;
@@ -41,13 +43,72 @@ footer {
     grid-template-columns: 50% 50%;
     align-items: center;
     width: 100%;
+    height: 550px;
     border: 2px solid rgb(100, 100, 100);
     border-radius: 10px;
    
 }
+input[type=range]{
+    -webkit-appearance: none;
+}
+input[type=range]::-webkit-slider-runnable-track {
+    
+    width: 100px;
+    height: 5px;
+    background: #ddd;
+    border: none;
+    border-radius: 3px;
+}
+
+input[type=range]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    border: none;
+    height: 16px;
+    width: 16px;
+    border-radius: 50%;
+    background: rgb(129, 129, 129);
+    margin-top: -4px;
+}
+
+.vertical {
+    transform: rotate(-90deg);
+    width: 100px;
+
+    position: absolute;
+}
+
+#drums-slider {
+    top:120px;
+    left:-70px;
+}
+
+#keyboard-slider {
+    top:80px;
+    left: -70px;
+}
+
+#chords-slider {
+    top:120px;
+    left: -70px;
+}
+
+#bass-slider {
+    top:120px;
+    left:-70px;
+}
+
+input[type=range]:focus {
+    outline: none;
+}
+
+input[type=range]:focus::-webkit-slider-runnable-track {
+    background: #ccc;
+}
 
 
 button {
+    // width: auto;
+    // height: 20px;
     background-color: rgb(165, 165, 165);
     cursor: pointer;
 }
@@ -55,10 +116,11 @@ button {
     width: 520px;
     height: 250x;
     padding: 10px;
+    position: relative;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 30px;
-    margin-bottom: 30px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     display: flex;
     justify-content: space-between;
     background-color: rgb(179, 179, 179);
@@ -85,6 +147,7 @@ button {
 
 .controls {
     display: inline-block;
+        
     
 }
 
@@ -96,7 +159,9 @@ button {
 .node {
     display: inline-flex;
     border-radius: 5px;
+    text-align: center;
     height: 25px;
+    color: #c8c8c8;
     width: 25px;
     border: 1px solid black;
     background-color: #c8c8c8;
@@ -118,19 +183,55 @@ button {
     cursor: pointer;
 }
 
-.selected {
-    border: 1px solid black;
-    background-color: yellow;
-}
-.selected-2 {
-    border: 1px solid black;
-    background-color: red;
-}
-.selected-3 {
+.chords-selected {
     border: 1px solid black;
     background-color: greenyellow;
+    color: greenyellow;
+    
+}
+.chords-selected-2 {
+    border: 1px solid black;
+    background-color: greenyellow;
+    color: black;
+}
+.chords-selected-3 {
+    border: 1px solid black;
+    background-color: greenyellow;
+    color: black;
 }
 
+.bass-selected {
+    border: 1px solid black;
+    background-color: orange;
+    color: orange;
+    
+}
+.bass-selected-2 {
+    border: 1px solid black;
+    background-color: orange;
+    color: black;
+}
+.bass-selected-3 {
+    border: 1px solid black;
+    background-color: orange;
+    color: black;
+}
+
+.drum-selected {
+    border: 1px solid black;
+    background-color: yellow;
+    color: yellow;
+}
+.drum-selected-2 {
+    border: 1px solid black;
+    background-color: yellow;
+    color: black;
+}
+.drum-selected-3 {
+    border: 1px solid black;
+    background-color: yellow;
+    color: black;
+}
 .node.current-beat {
     transition: border .2s ease-out;
     border: 1px solid white;
@@ -175,9 +276,15 @@ button {
     justify-content: space-between;
 }
 
+#keyboard-controls {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
 .inactive {
     color: black;
-    background-color: rgb(128, 128, 128);
+    background-color: rgb(130, 129, 129);
 }
 
 
