--- a/src/index.scss
+++ b/src/index.scss
@@ -179,6 +179,7 @@ button {
     width: 100px;
     margin-left: 10px;
     border: 1px solid black;
+    color: #c8c8c8;
     background-color: #c8c8c8;
     cursor: pointer;
 }
