--- a/src/index.scss
+++ b/src/index.scss
@@ -78,7 +78,7 @@ input[type=range]::-webkit-slider-thumb {
 }
 
 #drums-slider {
-    top:120px;
+    top:70px;
     left:-70px;
 }
 
@@ -288,5 +288,10 @@ button {
     background-color: rgb(130, 129, 129);
 }
 
-
-
+#social-link {
+    height: 50px;
+    width: 50px;
+    position: absolute;
+    top: 25px;
+    left: 1230px;
+}
