--- a/src/index.scss
+++ b/src/index.scss
@@ -28,6 +28,29 @@ header {
     margin-top: 5px;
 }
 
+#canvas1 {
+    background-color:#c8c8c8;
+    display: flex;
+    font-size: larger;
+    width: 100%;
+    height: 120px;
+    justify-content: center;
+    border: 2px solid rgb(90, 90, 90);
+    border-radius: 10px;
+    margin-bottom: 5px;
+    margin-top: 5px;
+    
+
+}
+#canvas-title {
+    position: absolute;
+    top: 16%;
+    left: 43%;
+    font-size: 40px;
+    line-height: 40px;
+    border-top: 5px solid black;
+}
+
 body {
     margin-left: 100px;
     margin-right: 100px;
