--- a/src/index.scss
+++ b/src/index.scss
@@ -10,18 +10,21 @@
     margin-left: auto;
     margin-right: auto;
     color: black;
-    background-color: white;
+    top: 80px;
+    background-color: rgb(200, 200, 200);
     height: 100%;
     padding: 10px;
-    
+    border: 2px solid rgb(90, 90, 90);
+    border-radius: 10px;
 }
 
 header {
-    background-color:#c8c8c8;
+    background-color:rgb(200, 200, 200);
     display: flex;
     font-size: larger;
     width: 100%;
     justify-content: center;
+    align-items: center;
     border: 2px solid rgb(90, 90, 90);
     border-radius: 10px;
     margin-bottom: 5px;
@@ -29,11 +32,11 @@ header {
 }
 
 #canvas1 {
-    background-color:#c8c8c8;
+    background-color:rgb(200, 200, 200);
     display: flex;
     font-size: larger;
     width: 100%;
-    height: 120px;
+    height: 90px;
     justify-content: center;
     border: 2px solid rgb(90, 90, 90);
     border-radius: 10px;
@@ -44,11 +47,10 @@ header {
 }
 #canvas-title {
     position: absolute;
-    top: 16%;
+    top: .5%;
     left: 43%;
     font-size: 40px;
     line-height: 40px;
-    border-top: 5px solid black;
 }
 
 body {
@@ -326,4 +328,10 @@ button {
     position: absolute;
     top: 25px;
     left: 1230px;
+}
+
+#instructions-open {
+    position: absolute;
+    top: 40px;
+    left: 160px;
 }
