Linkedin link added

--- a/src/index.scss
+++ b/src/index.scss
@@ -329,6 +329,13 @@ button {
     top: 25px;
     left: 1230px;
 }
+#social-link2 {
+    height: 50px;
+    width: 50px;
+    position: absolute;
+    top: 25px;
+    left: 1350px;
+}
 
 #instructions-open {
     position: absolute;
