--- a/src/index.scss
+++ b/src/index.scss
@@ -2,6 +2,8 @@
 // reset file
 @import './styles/reset.css';
 
+
+
 #instructions {
     z-index: 1;
     display: none;
@@ -18,17 +20,38 @@
     border-radius: 10px;
 }
 
-header {
-    background-color:rgb(200, 200, 200);
-    display: flex;
-    font-size: larger;
+// header {
+//     background-color:rgb(200, 200, 200);
+//     display: flex;
+//     font-size: larger;
+//     width: 100%;
+//     justify-content: center;
+//     align-items: center;
+//     border: 2px solid rgb(90, 90, 90);
+//     border-radius: 10px;
+//     margin-bottom: 5px;
+//     margin-top: 5px;
+// }
+
+.canvas-overlay {
+    position: absolute;
+    top: 5px;
+    left: 0px;
     width: 100%;
-    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+    
+    // border: 1px solid black;
+    // background-color: purple;
+    display: flex;
+    justify-content: space-around;
     align-items: center;
-    border: 2px solid rgb(90, 90, 90);
-    border-radius: 10px;
-    margin-bottom: 5px;
-    margin-top: 5px;
+}
+
+.social-links {
+    width: 150px;
+    display: flex;
+    justify-content: space-between;
 }
 
 #canvas1 {
@@ -45,10 +68,13 @@ header {
     
 
 }
+
+
+
 #canvas-title {
-    position: absolute;
-    top: .5%;
-    left: 43%;
+    // position: absolute;
+    // top: .5%;
+    // left: 43%;
     font-size: 40px;
     line-height: 40px;
 }
@@ -82,6 +108,7 @@ footer {
     border-radius: 10px;
    
 }
+
 input[type=range]{
     -webkit-appearance: none;
 }
@@ -325,22 +352,20 @@ button {
 #social-link {
     height: 50px;
     width: 50px;
-    position: absolute;
-    top: 25px;
-    left: 1230px;
+    // position: absolute;
+    // top: 25px;
+    // left: 1230px;
 }
 #social-link2 {
     height: 50px;
     width: 50px;
-    position: absolute;
-    top: 25px;
-    left: 1350px;
+    // position: absolute;
+    // top: 25px;
+    // left: 1350px;
 }
 
 #instructions-open {
-    position: absolute;
-    top: 40px;
-    left: 160px;
+   height: 30px;
 }
 
 .logo {
