--- a/src/index.scss
+++ b/src/index.scss
@@ -9,12 +9,12 @@
     display: none;
     position: fixed;
     width:1250px;
-    margin-left: auto;
+    margin-left: 10%;
     margin-right: auto;
     color: black;
     top: 80px;
     background-color: rgb(200, 200, 200);
-    height: 100%;
+    height: 80%;
     padding: 10px;
     border: 2px solid rgb(90, 90, 90);
     border-radius: 10px;
@@ -295,6 +295,10 @@ button {
     color: black;
 }
 .node.current-beat {
+    transition: border .2s ease-out;
+    border: 1px solid white;
+}
+.chord-node.current-beat {
     transition: border .2s ease-out;
     border: 1px solid white;
 }
